# Draw_Digit_then_Classify

./: .gitignore  CMakeLists.txt  README.md  run_this_GUI
doc/: my_notes.md
include/: GUI_button.h  common_headers.h
myNotes/: my_notes.md
src/: CMakeLists.txt  GUI_button.cpp  GUI_lib.cpp  GUI_lib.h  GUI_main.cpp  digit_classifier.cpp  digit_classifier.h  digit_classifier_data.h  k-means.ipynb
test/: CMakeLists.txt  test_digit_classifier.cpp
